--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <repositories>
         <repository>
             <id>project-repo</id>
-            <url>file://${basedir}/src/main/resources/repo</url>
+            <url>file://${project.basedir}/src/repo</url>
         </repository>
     </repositories>
     
