--- a/pom.xml
+++ b/pom.xml
@@ -11,21 +11,73 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
+        <jmonkey.version>3.0.10</jmonkey.version>
     </properties>
     
     <repositories>
+        <!-- local repo -->
         <repository>
             <id>project-repo</id>
             <url>file://${project.basedir}/src/repo</url>
         </repository>
+        <!-- JMonkey engine -->
+        <repository>
+            <id>jme</id>
+            <url>http://updates.jmonkeyengine.org/maven/</url>
+        </repository>
     </repositories>
     
     <dependencies>
-        
+
+        <!-- 3D camera -->
         <dependency>
             <groupId>intel.pcsdk</groupId>
             <artifactId>libpxcupipeline</artifactId>
             <version>1.0</version>
+        </dependency>
+
+        <!-- JMonkey engine -->
+        <dependency>
+            <groupId>com.jme3</groupId>
+            <artifactId>test-data</artifactId>
+            <version>${jmonkey.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.jme3</groupId>
+            <artifactId>jme3-core</artifactId>
+            <version>${jmonkey.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.jme3</groupId>
+            <artifactId>jme3-desktop</artifactId>
+            <version>${jmonkey.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.jme3</groupId>
+            <artifactId>jme3-lwjgl</artifactId>
+            <version>${jmonkey.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.jme3</groupId>
+            <artifactId>jme3-terrain</artifactId>
+            <version>${jmonkey.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.jme3</groupId>
+            <artifactId>jme3-plugins</artifactId>
+            <version>${jmonkey.version}</version>
+        </dependency>
+
+        <!-- Logging -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.3</version>
         </dependency>
         
     </dependencies>
