--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,13 @@
             <artifactId>logback-classic</artifactId>
             <version>1.1.3</version>
         </dependency>
+
+        <!-- Guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
         
     </dependencies>
     
